correccion de error hortografico

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="tr">
 
                     <div class="item" id="relogCassio">
-                        <span class="titulo-item">relog cassio</span>
+                        <span class="titulo-item">reloj cassio</span>
                         <img src="img/oferta.png" alt="" class="img-item">
                         <span class="precio-item">$35.000</span>
                         <button class="boton-item">Agregar al Carrito</button>
@@ -217,7 +217,7 @@
 
                 <div class="linkproductos">
                     <img src="img/oferta.png" alt="">
-                    <h3><a href="#">relogues</a></h3>
+                    <h3><a href="#">relojes</a></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vero odio iusto inventore est.
                         Mollitia!</p>
                 </div>
