--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
             <div class="contenedor-items">
                 <div class="tr">
 
-                    <div class="item" id="rolex">
+                    <br id="rolex">
+
+                    <div class="item">
                         <span class="titulo-item">rolex</span>
                         <img src="img/oferta.png" alt="" class="img-item">
                         <span class="precio-item">$25.000</span>
@@ -120,7 +122,9 @@
 
                     </div>
 
-                    <div class="item" id="carteraGucci">
+                    <br id="carteraGucci">
+
+                    <div class="item">
                         <span class="titulo-item">cartera gucci</span>
                         <img src="img/oferta.png" alt="" class="img-item">
                         <span class="precio-item">$25.000</span>
@@ -131,14 +135,19 @@
                 </div>
                 <div class="tr">
 
-                    <div class="item" id="relogCassio">
+                    <br id="relogCassio">
+
+                    <div class="item">
                         <span class="titulo-item">reloj cassio</span>
                         <img src="img/oferta.png" alt="" class="img-item">
                         <span class="precio-item">$35.000</span>
                         <button class="boton-item">Agregar al Carrito</button>
                         <i class='bx bxs-star'>(6 Reviews)</i>
                     </div>
-                    <div class="item" id="zapatoNike">
+
+                    <br id="zapatoNike">
+
+                    <div class="item">
                         <span class="titulo-item">zapato nike</span>
                         <img src="img/oferta.png" alt="" class="img-item">
                         <span class="precio-item">$18.000</span>
@@ -149,7 +158,9 @@
                 </div>
                 <div class="tr">
 
-                    <div class="item" id="silla">
+                    <br id="silla">
+
+                    <div class="item">
                         <span class="titulo-item">silla</span>
                         <img src="img/oferta.png" alt="" class="img-item">
                         <span class="precio-item">$32.000</span>
@@ -157,7 +168,10 @@
                         <i class='bx bxs-star'>(6 Reviews)</i>
 
                     </div>
-                    <div class="item" id="mesa">
+
+                    <br id="mesa">
+
+                    <div class="item">
                         <span class="titulo-item">mesa</span>
                         <img src="img/oferta.png" alt="" class="img-item">
                         <span class="precio-item">$18.000</span>
@@ -168,6 +182,8 @@
                 </div>
                 <div class="tr">
 
+                    <br id="parlante">
+
                     <div class="item" id="parlante">
                         <span class="titulo-item">parlante</span>
                         <img src="img/oferta.png" alt="" class="img-item">
@@ -176,7 +192,10 @@
                         <i class='bx bxs-star'>(6 Reviews)</i>
 
                     </div>
-                    <div class="item" id="iphon">
+
+                    <br id="iphon">
+
+                    <div class="item">
                         <span class="titulo-item">iphon</span>
                         <img src="img/oferta.png" alt="" class="img-item">
                         <span class="precio-item">$32.000</span>
