modificacion de footer

--- a/index.html
+++ b/index.html
@@ -313,12 +313,12 @@
                         <span><a href="#">novedades</a></span>
                     </div>
 
-                    <div class="redes">
+                    <div class="redes1">
                         <span>sigenos</span>
-                        <div>
-                            <a href="#"><i class='bx bxl-facebook'></i></a>
-                            <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                            <a href="#"><i class='bx bxl-tiktok'></i></a>
+                        <div class="redes">
+                            <a href="#"><i class='bx bxl-facebook'>facebook/ejemplo.com</i></a>
+                            <a href="#"><i class='bx bxl-instagram-alt'></i>instagran/ejemplo.com</a>
+                            <a href="#"><i class='bx bxl-tiktok'></i>tiktok/ejemplo.com</a>
                         </div>
                     </div>
                 </div>
